# -bot

./: README.md
He-Ping-Gu-Dai-Yong-Zhe-bot (1)/: backup.txt  level.db  main.py  main.sqlite  pyproject.toml  reactrole.json  setting.json  users.json
He-Ping-Gu-Dai-Yong-Zhe-bot (1)/cogs/: economy.py  event.py  level.py  level2.py  ordinary.py  role.py  ultrasouls.py  voice.py
